[package]
name = "covid"
version = "0.1.0"
authors = ["Aaron Abramov <dabramov@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
chrono = "0.4.19"
ll = "0.2.9"
rayon = "1.5.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = { version = "1.0.59" }
structopt = "0.3.20"
